--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <div class="col-xs-3">
+      STACKER
+    </div>
+    <div class="col-xs-4">
+      A tool for creating custom stacks
+    </div>
+    <div class="col-xs-5">
+      <%= link_to 'Add an Item', '#' %>
+    </div>
+  </header>
+
+  <br class="clear" />
 
 <%= yield %>
 
