--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,26 +17,49 @@
       A tool for creating custom stacks
     </div>
     <div class="col-xs-5 links">
-      <%= link_to 'Add an Item', new_item_path %>
+      <!-- Button trigger modal -->
+      <%= link_to 'Add an Item', '#', data: { toggle: 'modal', target: '#myModal' } %>
     </div>
   </header>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel">Add Your Item</h4>
+        </div>
+        <%= simple_form_for Item.new do |f| %>        
+          <div class="modal-body">
+            <%= f.input :name %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <%= f.submit 'Create Item', class: 'btn btn-success' %>
+          </div>
+        <% end %>  
+      </div>
+    </div>
+  </div>
+
   <hr />
   <br class="clear" />
 
-<div class="container">
-  <% if flash[:error].present? %>
-    <div class="col-xs-10 col-xs-offset-1 alert alert-danger">
-      <%= flash[:error].html_safe %>
-    </div>
-  <% end %>  
-  <%= yield %>
-</div>
-
-<div class="footer">
   <div class="container">
-    <p class="text-muted">Created by Erin Madison Anthony</p>
+    <% if flash[:error].present? %>
+      <div class="col-xs-10 col-xs-offset-1 alert alert-danger">
+        <%= flash[:error].html_safe %>
+      </div>
+    <% end %>  
+    <%= yield %>
   </div>
-</div>
+
+  <div class="footer">
+    <div class="container">
+      <p class="text-muted">Created by Erin Madison Anthony</p>
+    </div>
+  </div>
 
 </body>
 </html>
