--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,7 @@
-<h1><%= @item.name %></h1>
+<% @items.each do |item| %>
+  <div>
+    <h1><%= item.name %></h1>
+  </div> 
+<% end %>   
 
 <br class="clear" />
