--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,35 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header>
-    <div class="col-xs-3">
-      <%= link_to root_path, class: 'logo-link' do %>
-        <div class="logo">STACKER</div>
-      <% end %>  
-    </div>
-    <div class="col-xs-4 hidden-xs slogan">
-      A tool for creating custom stacks
-    </div>
-    <div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">
-      <!-- Button trigger modal -->
-      <%= link_to 'Add an Item', '#', data: { toggle: 'modal', target: '#myModal' } %>
-    </div>
-  </header>
+
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to root_path, class: 'navbar-brand' do %>
+          <div>Stacker</div>
+        <% end %>  
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><!-- Button trigger modal -->
+          <%= link_to 'Add an Item', '#', data: {toggle: 'modal', target: '#myModal'} %>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Link</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -43,7 +58,6 @@
     </div>
   </div>
 
-  <hr />
   <br class="clear" />
 
   <div class="container">
@@ -52,6 +66,7 @@
         <%= flash[:error].html_safe %>
       </div>
     <% end %>  
+
     <%= yield %>
   </div>
 
