--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 <% @items.each do |item| %>
-  <div>
-    <h1><%= item.name %></h1>
+  <div class="box col-xs-6 col-xs-offset-3">
+    <h1 id="stack"><%= item.name %></h1>
   </div> 
 <% end %>   
 
