--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Prompt';
+
 .clear {
   clear: both;
 }
@@ -14,11 +16,24 @@
   background: #e6e6fa;
   border: 1px solid;
   border-color: #008080;
-  border-radius: 3%;
-  margin: 3px;
+  margin: 2px;
   padding: 5px;
 }
 
 #stack {
     text-align: center;
+}
+
+.navbar.navbar-default {
+    background: #008080;
+    border-radius: 0;
+    box-shadow: 0px 1px 3px #2a2a2a;
+}
+
+#logo, #bs-example-navbar-collapse-1 ul li a {
+    color: #e6e6fa;
+}
+
+body, #logo, #bs-example-navbar-collapse-1 ul li a, #stack {
+    font-family: 'Prompt', sans-serif;
 }
