--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Prompt';
+@import url('//fonts.googleapis.com/css?family=Prompt');
 
 .clear {
   clear: both;
