--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -37,3 +37,7 @@
 body, #logo, #bs-example-navbar-collapse-1 ul li a, #stack {
     font-family: 'Prompt', sans-serif;
 }
+
+.btn.btn-primary {
+    background: #008080;
+}
