--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,12 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
+          <% if user_signed_in? %>
+            <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to 'Log in', new_user_session_path %></li>
+            <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <% end %>  
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -74,7 +79,11 @@
     <%= yield %>
   </div>
 
-  <div class="footer">
+  <br class="clear" />
+  <br />
+  <br />
+
+  <div id="footer">
     <div class="container">
       <p class="text-muted">Created by Erin Madison Anthony</p>
     </div>
