--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,7 @@
 
   <div id="footer">
     <div class="container">
-      <p class="text-muted">Created by Erin Madison Anthony</p>
+      <p class="text-muted">&copy 2016 Erin Madison Anthony</p>
     </div>
   </div>
 
