--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -20,7 +20,7 @@
   padding: 5px;
 }
 
-#stack {
+.centered {
     text-align: center;
 }
 
@@ -40,4 +40,14 @@ body, #logo, #bs-example-navbar-collapse-1 ul li a, #stack {
 
 .btn.btn-primary {
     background: #008080;
+}
+
+#footer {
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+}
+
+div h1, div h1 a {
+  color: #008080;
 }
