--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,6 @@
 <div class="box col-xs-8 col-xs-offset-2">
   <h1 class="centered"><%= @item.name %></h1>
 </div>
+<div class="pull-right">
+  <%= link_to 'Delete', item_path(@item), method: :delete, data: {confirm: 'Are you sure you want to delete this item?'}, class: 'btn btn-primary' %>
+</div>
