restrict item deletion to item creator

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -51,3 +51,7 @@ body, #logo, #bs-example-navbar-collapse-1 ul li a, #stack {
 div h1, div h1 a {
   color: #008080;
 }
+
+#ed-button {
+  margin-bottom: 5px;
+}
