--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,5 +2,7 @@
   <h1 class="centered"><%= @item.name %></h1>
 </div>
 <div class="pull-right">
-  <%= link_to 'Delete', item_path(@item), method: :delete, data: {confirm: 'Are you sure you want to delete this item?'}, class: 'btn btn-primary' %>
+  <% if current_user && current_user == @item.user %>
+    <%= link_to 'Delete', item_path(@item), method: :delete, data: {confirm: 'Are you sure you want to delete this item?'}, class: 'btn btn-primary' %>
+  <% end %>
 </div>
