--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,7 @@
         <%= simple_form_for Item.new do |f| %>        
           <div class="modal-body">
             <%= f.input :name, label: "What is the name of the item you would like to add?" %>
+            <%= f.input :description, label: "Would you like to add a description (optional)?" %>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
