make items sortable

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,15 @@
-<% @items.rank(:order).each do |item| %>
-  <div class="box col-xs-6 col-xs-offset-3">
-    <h1 class="centered"><%= link_to item.name, item_path(item) %></h1>
-  </div> 
-<% end %>   
+  <script>
+    $(function() {
+      $('.items').sortable({});
+    });
+  </script>
+
+<ul class="items">
+  <% @items.rank(:order).each do |item| %>
+    <ul class="box col-xs-6 col-xs-offset-3">
+      <h1 class="centered"><%= link_to item.name, item_path(item) %></h1>
+    </ul> 
+  <% end %>
+</ul>   
 
 <br class="clear" />
