--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -46,6 +46,7 @@ body, #logo, #bs-example-navbar-collapse-1 ul li a, #stack {
   position: absolute;
   bottom: 10px;
   right: 15px;
+  margin-top: 10px;
 }
 
 div h1, div h1 a {
