--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -1,1 +1,6 @@
 <h1>Add a New Pic</h1>
+
+<%= simple_form_for(Pic.new, html: { class: 'horizontal'}) do |f| %>
+  <%= f.input :message %>
+  <%= f.submit "Submit" %>
+<% end %>
